<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CovidHelper</string>
    <string name="check_for_availability">Check For Availability</string>
    <string name="remdesivir">Remdesivir</string>
    <string name="todo">TODO</string>
    <string name="beds">Beds</string>
    <string name="plasma">Plasma</string>
    <string name="register_online">Register Online</string>


<!--    <string-array name="sates_spinner">-->
<!--        <item>Andhra Pradesh</item>-->
<!--        <item>Arunachal Pradesh</item>-->
<!--        <item>Assam</item>-->
<!--        <item>Bihar</item>-->
<!--        <item>Chhattisgarh</item>-->
<!--        <item>Goa</item>-->
<!--        <item>Gujarat</item>-->
<!--        <item>Haryana</item>-->
<!--        <item>Himachal Pradesh</item>-->
<!--        <item>Jammu and Kashmir</item>-->
<!--        <item>Jharkhand</item>-->
<!--        <item>Karnataka</item>-->
<!--        <item>Kerala</item>-->
<!--        <item>Madhya Pradesh</item>-->
<!--        <item>Maharashtra</item>-->
<!--        <item>Manipur</item>-->
<!--        <item>Meghalaya</item>-->
<!--        <item>Mizoram</item>-->
<!--        <item>Nagaland</item>-->
<!--        <item>Odisha</item>-->
<!--        <item>Punjab</item>-->
<!--        <item>Rajasthan</item>-->
<!--        <item>Sikkim</item>-->
<!--        <item>Tamil Nadu</item>-->
<!--        <item>Telangana</item>-->
<!--        <item>Tripura</item>-->
<!--        <item>Uttarakhand</item>-->
<!--        <item>Uttar Pradesh</item>-->
<!--        <item>West Bengal</item>-->
<!--        <item>Andaman and Nicobar Islands</item>-->
<!--        <item>Chandigarh</item>-->
<!--        <item>Dadra and Nagar Haveli</item>-->
<!--        <item>Daman and Diu</item>-->
<!--        <item>Delhi</item>-->
<!--        <item>Lakshadweep</item>-->
<!--        <item>Puducherry</item>-->
<!--    </string-array>-->
</resources>